--- a/calc/index.html
+++ b/calc/index.html
@@ -26,7 +26,7 @@
                 position: absolute;
                 left: 0;
                 right: 10px;
-                height: 100px;
+                height: 200px;
                 font-size: 60px;
                 line-height: 100px;
                 letter-spacing: 0.1em;
@@ -35,7 +35,7 @@
             }
             #keyboard {
                 position: absolute;
-                top: 100px;
+                top: 200px;
                 bottom: 0;
                 width: 100%;
             }
@@ -60,6 +60,8 @@
             let action = CONCAT;
             let l = 0, x = 0, y = 0, z = 0, t = 0;
 
+            window.onload = show;
+
             function insert(c) {
                 if (action == ROLL) {
                     t = z;
@@ -71,12 +73,12 @@
                     x = 0
                 }
 
-                x = parseFloat('' + x + c);
-                display(x);
+                x = x * 10 + c;
+                show();
             }
 
-            function display(num) {
-                document.getElementById("display").innerText = x;
+            function show() {
+                document.getElementById("display").innerHTML = y + "<br>" + x;
             }
 
             function enter() {
@@ -84,6 +86,7 @@
                 t = z;
                 z = y;
                 y = x;
+                show();
             }
 
             function add() {
@@ -92,7 +95,7 @@
                 x = y + x;
                 z = t;
                 y = z;
-                display(x);
+                show();
             }
 
             function sub() {
@@ -101,7 +104,7 @@
                 x = y - x;
                 z = t;
                 y = z;
-                display(x);
+                show();
             }
 
             function mul() {
@@ -110,7 +113,7 @@
                 x = y * x;
                 z = t;
                 y = z;
-                display(x);
+                show();
             }
 
             function div() {
@@ -119,7 +122,7 @@
                 x = y / x;
                 z = t;
                 y = z;
-                display(x);
+                show();
             }
 
             function swap() {
@@ -127,7 +130,7 @@
                 let current = x;
                 x = y;
                 y = current;
-                display(x);
+                show();
             }
 
             function rotate() {
@@ -137,7 +140,7 @@
                 y = z;
                 z = t;
                 t = current;
-                display(y);
+                show();
             }
 
             function lstx() {
@@ -145,48 +148,49 @@
                 t = z;
                 z = y;
                 y = x;
-                display(l);
+                x = l;
+                show();
             }
 
             function clx() {
                 action = null;
                 x = 0;
-                display(x);
+                show();
             }
 
             function chs() {
                 x = -1 * x;
-                display(x);
+                show();
             }
         </script>
     </head>
     <body>
         <div id="display"></div>
         <div id="keyboard">
-            <button onclick="clx()">CLX</button>
-            <button onclick="chs()">CHS</button>
-            <button onclick="swap()">x≷y</button>
-            <button onclick="rotate()">R🠗</button>
+            <button onclick="chs()">+/-</button>
+            <button onclick="swap()">↓↑</button>
+            <button onclick="rotate()">↓</button>
+            <button onclick="clx()">⌫</button>
 
             <button onclick="insert(7)">7</button>
             <button onclick="insert(8)">8</button>
             <button onclick="insert(9)">9</button>
-            <button onclick="div()">/</button>
+            <button onclick="div()">÷</button>
 
             <button onclick="insert(4)">4</button>
             <button onclick="insert(5)">5</button>
             <button onclick="insert(6)">6</button>
-            <button onclick="mul()">*</button>
+            <button onclick="mul()">×</button>
 
             <button onclick="insert(1)">1</button>
             <button onclick="insert(2)">2</button>
             <button onclick="insert(3)">3</button>
-            <button onclick="add()">+</button>
+            <button onclick="sub()">−</button>
 
             <button onclick="insert(0)">0</button>
             <button onclick="insert(.)">.</button>
-            <button onclick="enter()">ENTER</button>
-            <button onclick="sub()">-</button>
+            <button onclick="enter()">⤶</button>
+            <button onclick="add()">+</button>
         </div>
     </body>
 </html>
