Emulating CLX behaviour from 12C

--- a/calc/index.html
+++ b/calc/index.html
@@ -179,10 +179,12 @@
             }
 
             function rcl() {
+                if (action == ROLL) {
+                    t = z;
+                    z = y;
+                    y = x;
+                }
                 action = ROLL;
-                t = z;
-                z = y;
-                y = x;
                 x = reg;
                 show();
             }
