Some gradient and shadow

--- a/calc/index.html
+++ b/calc/index.html
@@ -25,13 +25,15 @@
             #display {
                 position: absolute;
                 left: 0;
-                right: 10px;
+                right: 0;
+                padding-right: 10px;
                 height: 200px;
                 font-size: 60px;
                 line-height: 100px;
                 letter-spacing: 0.1em;
                 color: #FFF;
                 text-align: right;
+                box-shadow: inset 0 0 30px #111;
             }
             #keyboard {
                 position: absolute;
@@ -48,7 +50,8 @@
                 font-size: 40px;
                 color: #666;
                 background: #DDD;
-                border: 1px solid #AAA;
+                background: linear-gradient(0, #CCC 0%, #DDD 20%);
+                border: 1px solid #BBB;
                 outline: none;
                 cursor: pointer;
             }
