--- a/calc/index.html
+++ b/calc/index.html
@@ -46,14 +46,16 @@
                 margin: -1px;
                 width: calc(25% + 2px);
                 height: calc(16.67% + 2px);
+                padding-right: 10px;
+                padding-bottom: 10px;
                 font-family: 'Bebas Neue', cursive;
                 font-size: 40px;
                 color: #666;
                 background: #DDD;
-                background: linear-gradient(0, #CCC 0%, #DDD 20%);
-                border: 1px solid #BBB;
+                border: 1px solid #CCC;
                 outline: none;
                 cursor: pointer;
+                box-shadow: inset -10px -10px 10px #CCC;
             }
         </style>
         <script type="text/javascript">
